--- a/Class_Resources/8-1-Student_Resources/06-Stu_ConditionalListComprehensions/Unsolved/ConditionalComprehensions_Unsolved.ipynb
+++ b/Class_Resources/8-1-Student_Resources/06-Stu_ConditionalListComprehensions/Unsolved/ConditionalComprehensions_Unsolved.ipynb
@@ -61,23 +61,23 @@
     }
    ],
    "source": [
-    "# Make a list of numbers up to 100 that are divisible by three\n"
+    "# Make a list of numbers up to 100 that are divisible by three\n",
+    "\n",
+    "div_100 = [x for x in range(100): if x/3 == 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Fido', 'Rex', 'Springer']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (2323851471.py, line 24)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\emili\\AppData\\Local\\Temp\\ipykernel_10888\\2323851471.py\"\u001b[1;36m, line \u001b[1;32m24\u001b[0m\n\u001b[1;33m    [pets['name'] for pets in pets if pet['type']== 'dog'\u001b[0m\n\u001b[1;37m                                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
     }
    ],
    "source": [
@@ -103,12 +103,20 @@
     "    'age': 5,\n",
     "    'type': 'dog'\n",
     "}]\n",
-    "\n"
+    "\n",
+    "[pets['name'] for pets in pets if pet['type']== 'dog'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -163,87 +171,46 @@
        " 99]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Make a list of numbers up to 100 that are divisible by three OR divisible by five\n"
+    "# Make a list of numbers up to 100 that are divisible by three OR divisible by five\n",
+    "\n",
+    "[x for x in range(100) if x % 3 == 0 or x % 5 == 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['FizzBuzz',\n",
-       " 'Fizz',\n",
-       " 'Buzz',\n",
-       " 'Fizz',\n",
-       " 'Fizz',\n",
-       " 'Buzz',\n",
-       " 'Fizz',\n",
-       " 'FizzBuzz',\n",
-       " 'Fizz',\n",
-       " 'Buzz',\n",
-       " 'Fizz',\n",
-       " 'Fizz',\n",
-       " 'Buzz',\n",
-       " 'Fizz',\n",
-       " 'FizzBuzz',\n",
-       " 'Fizz',\n",
-       " 'Buzz',\n",
-       " 'Fizz',\n",
-       " 'Fizz',\n",
-       " 'Buzz',\n",
-       " 'Fizz',\n",
-       " 'FizzBuzz',\n",
-       " 'Fizz',\n",
-       " 'Buzz',\n",
-       " 'Fizz',\n",
-       " 'Fizz',\n",
-       " 'Buzz',\n",
-       " 'Fizz',\n",
-       " 'FizzBuzz',\n",
-       " 'Fizz',\n",
-       " 'Buzz',\n",
-       " 'Fizz',\n",
-       " 'Fizz',\n",
-       " 'Buzz',\n",
-       " 'Fizz',\n",
-       " 'FizzBuzz',\n",
-       " 'Fizz',\n",
-       " 'Buzz',\n",
-       " 'Fizz',\n",
-       " 'Fizz',\n",
-       " 'Buzz',\n",
-       " 'Fizz',\n",
-       " 'FizzBuzz',\n",
-       " 'Fizz',\n",
-       " 'Buzz',\n",
-       " 'Fizz',\n",
-       " 'Fizz']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1563009505.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\emili\\AppData\\Local\\Temp\\ipykernel_10888\\1563009505.py\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    ['FizzBuzz' if x % 3 == 0 and if  x % 5 == 0 else\u001b[0m\n\u001b[1;37m                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
     "# BONUS: Make a list comprehension that implements FizzBuzz on the previous list\n",
     "# FizzBuzz replaces multiples of 3 with \"Fizz\", multiples of 5 with \"Buzz\" and multiples of both 3 and 5 with \"FizzBuzz\"\n",
-    "# HINT: use a conditional in the expression at the beginning of the list comprehension\n"
+    "# HINT: use a conditional in the expression at the beginning of the list comprehension\n",
+    "\n",
+    "['FizzBuzz' if x % 3 == 0 and if  x % 5 == 0 else\n",
+    "    'Fizz' if x % 3 == 0 else\n",
+    "        'Buzz' if x % 5 == 0 else ' '\n",
+    "            for x in range(100) if x % 3 == 0 or if x % 5 == 0]"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -257,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
